# perf-bisect

./: README.md  pyproject.toml
src/perf_bisect/: __init__.py  bisector.py  cli.py  graph.py  reporter.py
tests/: test_bisector.py  test_cli.py  test_graph.py  test_reporter.py
